--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,31 @@
+/* Extra */
+.sg-footer-image {
+    width: 85%;
+}
+
+@media (min-width: 767px) {
+    #sg-footer-logo-big {
+        display: block;
+    }
+    #sg-footer-logo-small {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    #sg-footer-logo-big {
+        display: none;
+    }
+    #sg-footer-logo-small {
+        display: block;
+    }
+}
+
+
+
+
+
+
 
 /* Header Implimentation */
 #stuGoHeader {
@@ -535,7 +563,7 @@
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased !important;
     background: #e47c37;
-    padding: 4.2rem 0;
+    padding: 3rem 0;
 }
 
 #banner .container-fluid .clearfix .row .col-md-12 .banner__section .region .block .content div .view  h1{
@@ -565,22 +593,18 @@
 
 .sidebar-first {
     padding: 0;
-    margin-top: -1.2rem;
-}
-
-body:not(.code-example-body) {
-    max-width: none;
-    margin: 0;
-    background-color: #fff;
-    color: #000;
-    font-family: "GothamBook","Helvetica","Arial","Sans-serif" !important;
-    font-weight: normal;
 }
 
 @media (min-width: 768px) {
     .au-side-nav .au-accordion__body.au-accordion--closed {
         display: block;
         height: auto;
+    }
+    .sidebar-first {
+        margin-top: 0rem;
+    }
+    #banner .container-fluid .clearfix .row .col-md-12 .banner__section .region .block .content div .view {
+        padding: 4rem 0;
     }
 }
 
@@ -636,27 +660,80 @@ body:not(.code-example-body) {
 }
 
 .au-side-nav {
-    -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     font-family: "GothamBook", "Helvetica", "Arial", "Sans-serif" !important;
 }
 
+#sideNavInnerDiv {
+    top: -32px;
+    position: relative;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    -webkit-box-shadow: 0 6px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+
+}
 
 #sideNavTitle {
     display: block;
-    top: -20px;
-    position: relative;
     height: 32px;
     margin-block-end: 0rem
 }
 
 #sideNavList {
-    top: -20px;
-    position: relative;
+}
+
+@media (max-width: 767px) {
+    .sidebar-first {
+        margin-bottom: 1.875rem;
+    }
+    .sidebar__section {
+        padding-top: 0px;
+        padding-bottom: 20px;
+    }
+    .au-side-nav {
+        box-shadow: 0 0px 12px rgba(0,0,0,0.19), 0 2px 4px rgba(0,0,0,0.16);
+        -webkit-box-shadow: 0 0px 12px rgba(0,0,0,0.19), 0 2px 4px rgba(0,0,0,0.16);
+    }
+    .au-side-nav .au-accordion__title {
+        font-size: 1.115rem;
+    }
+    #block-booknavigation {
+        position: relative;
+        top: -30px
+    }
+    div#block-booknavigation a.au-side-nav__toggle {
+        padding-top: 16px;
+        padding-bottom: 16px;
+        background: rgb(243, 243, 243);
+        font-family: "GothamBold";
+        font-weight: bold;
+        color: black;
+        font-size: 20px;
+        font-size: 1.25rem;
+        line-height: 1.6;
+        text-decoration: none
+    }
+    #sideNavTitle {
+        display: none
+    }
+    #sideNavList {
+        position: relative;
+        top: 8px;
+    }
+    section.sidebar__section {
+        margin-bottom: -4.4rem;
+    }
+}
+
+.au-side-nav {
+    border-radius: 0px
 }
 
 
-
+/* Footer Implimentation */
+.au-footer.au-footer--dark {
+    color: #fff;
+    border-color: #ce3723;
+    background-color: #8b0000
+}
 
 /* Focus Overwrite */
 @media (min-width: 1px) {
