--- a/docs/templates/index.html
+++ b/docs/templates/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>NCPA Student Government | Home</title>
 	<link rel="icon" href="assets/favicons/favicon.ico">
-	<link type="text/css" rel="stylesheet" href="css/main.css">
+	<link type="text/css" rel="stylesheet" href="/docs/css/main.css">
 </head>
 
 <!-- BODY -->
@@ -162,7 +162,7 @@
 	</footer>
 
 	<!-- The javascript from pancake to open and close side nav on desktop -->
-	<script type="text/javascript" src="js/script.min.js"></script>
+	<script type="text/javascript" src="/docs/js/script.min.js"></script>
 </body>
 
 </html>
